[dependencies]
arrayvec = { default-features = false, optional = true, version = "0.7" }
serde = { default-features = false, optional = true, version = "1.0" }
smallvec = { default-features = false, optional = true, version = "1.0" }
tinyvec = { default-features = false, optional = true, version = "1.0" }

[features]
alloc = ["tinyvec?/alloc"]
default = []
std = ["alloc"]

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
categories = ["development-tools"]
description = "Provides elements that describe collections"
edition = "2021"
keywords = ["collections", "traits"]
license = "Apache-2.0"
name = "cl-aux"
readme = "README.md"
repository = "https://github.com/c410-f3r/regular-crates"
rust-version = "1.65"
version = "4.4.0"
