[features]
default = []

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
categories = ["command-line-interface", "config"]
description = "Rust tools"
edition = "2021"
keywords = ["ci", "tools"]
license = "Apache-2.0"
name = "rust-tools"
readme = "README.md"
repository = "https://github.com/c410-f3r/regular-crates"
rust-version = "1.61"
version = "1.0.2"
