[[bin]]
name = "parse-frame"
path = "parse_frame.rs"

[[bin]]
name = "unmask"
path = "unmask.rs"

[dependencies]
async-trait = { default-features = false, optional = true, version = "0.1" }
libfuzzer-sys = { default-features = false, version = "0.4" }
tokio = { default-features = false, features = ["io-util", "macros", "rt", "sync"], version = "1.32" }
wtx = { default-features = false, features = ["async-std", "std"], path = "../wtx" }

[package]
name = "wtx-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true
